Bug 105656 - Crash in: mergedlo.dll
Summary: Crash in: mergedlo.dll
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-31 22:17 UTC by Regina Henschel
Modified: 2017-03-09 04:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-01-31 22:17:22 UTC
This bug was filed from the crash reporting server and is br-3f530dab-fe85-4455-9802-5eb18917f342.
=========================================

The crash happens in Draw, but that is not available in the list in the crash report site.

How to reproduce the crash:
Draw a closed polygon with three points, so that you get a triangle.
Enable point edit mode.
Enable "Eliminate Points"
Drag one point of the triangle to the opposite edge.
In the moment, when the actual angle is smaller than the angle set in "point reduction" and the point will be eliminated and the line will be straight, it crashes.

There is a problem with deleting the third point of a closed polygon or Bézier curve. See bug 105545 and https://gerrit.libreoffice.org/33654

I have just noticed, that the same restriction "aCandidate.count() < 3L", which I found in svx/source/svdraw/polypolygoneditor.cxx, is in /core/svx/source/svdraw/svdopath.cxx too. But it is to late in the evening for me to investigate immediately.
Comment 1 Regina Henschel 2017-02-01 07:44:55 UTC
If I remove the part
 (IsClosed(meObjectKind) && aCandidate.count() < 3L)
in svdopath.cxx, then it does no longer crash.

But I do not know the reason for the crash.
Comment 2 Commit Notification 2017-02-04 08:49:00 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e8f2afc2e2bbdbe136e74a24fb6c6eb94cde3c6

tdf#105656 only delete path if less than 2 points

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2017-02-27 10:15:05 UTC
Hello Regina,
Is this bug fixed? If so, could you please close it as RESOLVED FIXED?, Could you also backport it to 5.3 and 5.2.6 ?
Comment 4 Regina Henschel 2017-02-27 16:35:06 UTC
Yes it is fixed in Version: 5.4.0.0.alpha0+
Build ID: eb7b03b052ffe8c2c577b2349987653db6c53f76
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-26_22:34:18
Locale: de-DE (de_DE); Calc: group

(In reply to Xisco Faulí from comment #3)
> Could you also backport it to 5.3 and 5.2.6 ?

No, I do not have any commit rights.
Comment 5 Xisco Faulí 2017-02-27 16:42:05 UTC
(In reply to Regina Henschel from comment #4)
> Yes it is fixed in Version: 5.4.0.0.alpha0+
> Build ID: eb7b03b052ffe8c2c577b2349987653db6c53f76
> CPU threads: 4; OS: Windows 6.1; UI render: default; 
> TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-26_22:34:18
> Locale: de-DE (de_DE); Calc: group
> 
> (In reply to Xisco Faulí from comment #3)
> > Could you also backport it to 5.3 and 5.2.6 ?
> 
> No, I do not have any commit rights.

Cherry-picked to 5.3 branch: https://gerrit.libreoffice.org/#/c/34688/. too late for 5.2
Comment 6 Commit Notification 2017-03-09 04:24:27 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89f08aecf58c97cc75eaae1d7b5e8531b04eaccd&h=libreoffice-5-3

tdf#105656 only delete path if less than 2 points

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.