tdf#105656 only delete path if less than 2 points

This prevents the crash. It might be related to
gerrit #/c/33654

Change-Id: I92907c7874964af722b69ed8afd9249e110b3401
Reviewed-on: https://gerrit.libreoffice.org/33907
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>
(cherry picked from commit 9e8f2afc2e2bbdbe136e74a24fb6c6eb94cde3c6)
Reviewed-on: https://gerrit.libreoffice.org/34688
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>